--- a/static/css/style.css
+++ b/static/css/style.css
@@ -200,3 +200,30 @@ button:hover {
         text-align: left;
     }
 }
+
+
+
+
+
+
+.course-card {
+    margin-bottom: 20px;
+    padding: 15px;
+    background-color: #f4f4f4;
+    border-radius: 8px;
+    box-shadow: 0 0 8px rgba(0,0,0,0.05);
+}
+
+.course-card h4 {
+    margin-bottom: 10px;
+    color: #333;
+}
+
+.course-card ul {
+    list-style: disc inside;
+    padding-left: 0;
+}
+
+.course-card p {
+    color: #666;
+}
