--- a/frontend/school-admin/src/styles/global.css
+++ b/frontend/school-admin/src/styles/global.css
@@ -10,15 +10,15 @@
 .google-dashboard {
   display: flex;
   min-height: 100vh;
-  background: hsl(220, 37%, 97%);
+  background: hsl(228, 15%, 94%);
   gap: 20px;
   margin-top: 80px;
 }
 
 .top-navbar {
   width: 100%;
-  height: 50px;
-   background: hsl(220, 37%, 97%); /* dark blue */
+  height: 60px;
+  background: hsl(0, 0%, 100%); /* dark blue */
   color: rgb(14, 13, 13);
   display: flex;
   justify-content: space-between;
@@ -28,13 +28,38 @@
   top: 0;
   left: 0;
   z-index: 50;
-  box-shadow: 0 0.6px 2px rgba(0,0,0,0.2);
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
 }
 
 .top-navbar h2 {
   font-size: 24px;
   font-weight: 600;
 }
+.nav-search {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin-left: -700px; /* small spacing from the title */
+}
+
+.nav-search input {
+  width: 250px;
+  padding: 8px 12px 8px 35px;  /* space for icon */
+  border: 1px solid #ffffff;
+  border-radius: 18px;
+  outline: none;
+  background: #dae0e9;
+
+}
+
+.search-icon {
+  position: absolute;
+  left: 12px;              /* inside input */
+  font-size: 16px;
+  color: #606770;
+}
+
+
 
 .nav-right {
   display: flex;
@@ -67,7 +92,7 @@
   top: 50%;
   left: 20px;
   transform: translateY(-50%);
-  animation: slideIn 0.5s ease forwards;
+  /*animation: slideIn 0.5s ease forwards;*/
   margin-left: -20px;
   
 }
@@ -75,7 +100,7 @@
 /* Sidebar profile */
 .sidebar-profile {
   text-align: center;
-  margin-bottom: 40px; /* more spacing */
+  margin-bottom: 0px; /* more spacing */
 }
 
 .sidebar-img-circle {
@@ -99,12 +124,13 @@
 }
 
 .sidebar-profile h3 {
-  margin: 5px 0;
+ margin-top: -15px;
   font-size: 20px; /* larger font */
   color: #333;
 }
 
 .sidebar-profile p {
+  margin: -2px;
   font-size: 16px; /* larger font */
   color: #777;
 }
@@ -120,11 +146,12 @@
   display: flex;
   align-items: center;
   gap: 15px; /* more space between icon and text */
-  padding: 15px 25px; /* bigger button */
+  padding: 10px 25px; /* bigger button */
   margin: 10px 0; /* more spacing */
+  text-decoration: none;
   width: 100%;
   border: none;
-  border-radius: 12px; /* slightly more rounded */
+  border-radius: 5px; /* slightly more rounded */
   cursor: pointer;
   font-size: 18px; /* bigger font */
   background: #f0f0f0;
@@ -205,6 +232,7 @@
   display: flex;
   align-items: flex-start;
   gap: 15px;
+ 
 }
 
 .fb-post-top img {
@@ -218,9 +246,10 @@
   flex: 1;
   border: none;
   resize: none;
-  height: 50px;
+  margin-top: 6px;
+  height: 35px;
   font-size: 18px;
-  padding: 10px;
+  padding: 5px 15px;
   border-radius: 12px;
   background: #f0f2f5;
 }
@@ -245,11 +274,6 @@
   align-items: center;
   gap: 6px;
  
-  background: #f0f2f5;
-  border-radius: 20px;
-  cursor: pointer;
-  font-size: 15px;
-  color: #444;
   font-weight: 500;
   position: relative;
   padding-top: 10px;
@@ -265,9 +289,6 @@
   color: #45bd62; /* Facebook green photo icon */
 }
 
-.fb-icon.video {
-  color: #f3425f; /* Facebook red live video icon */
-}
 
 
 
@@ -300,6 +321,7 @@
   margin: 0 5% 30px 40%; /* top:0, right:0, bottom:30px, left:25% */
   padding: 0px;
   gap: 10px;
+  margin-top: -18px;
 
 }
 
