--- a/static/css/style.css
+++ b/static/css/style.css
@@ -229,6 +229,31 @@ button:hover {
 }
 /* ===================== TEACHER DASHBOARD - MARK INPUT STYLE ===================== */
 
+
+
+
+
+
+
+#logoutBtn {
+    padding: 7px 10px;       /* smaller padding */
+    font-size: 14px;         /* text size */
+    width: auto;             /* auto width */
+    float: right;            /* move to right */
+    margin-right: 10px;      /* spacing from edge */
+    
+    background: transparent; /* no fill color */
+    border: 2px solid #0069d9;  /* border color and thickness */
+    border-radius: 5px;      /* optional: rounded corners */
+    cursor: pointer;         /* pointer on hover */
+    color: #0069d9;          /* text color */
+}
+
+
+
+
+  
+
 .students-table input[type="number"] {
     width: 60px;
     padding: 5px 8px;
