--- a/frontend/school-admin/src/styles/global.css
+++ b/frontend/school-admin/src/styles/global.css
@@ -547,3 +547,27 @@ button.dark-mode:hover {
 .dark-mode button:hover {
   background-color: #5c5c80;
 }
+
+ /* ---------------- TOP NAVIGATION BAR ---------------- */
+
+
+.icon-circle {
+  width: 40px;
+  height: 40px;
+  background-color: #e0e0e4;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.icon-circle svg {
+  font-size: 22px;
+  color: #000000;
+}
+
+.icon-circle:hover {
+  background-color: #cfd5e5;
+}
+
