--- a/templates/student_register.html
+++ b/templates/student_register.html
@@ -6,33 +6,51 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
+
     <h2>Student Registration</h2>
-    <form id="studentForm">
-        <label>Name:</label>
-        <input type="text" id="name" required><br>
 
-        <label>Username:</label>
-        <input type="text" id="username" required><br>
+    <!-- IMPORTANT: multipart/form-data is REQUIRED for file upload -->
+    <form id="studentForm" enctype="multipart/form-data">
 
-        <label>Password:</label>
-        <input type="password" id="password" required><br>
+        <label for="name">Name:</label>
+        <input type="text" id="name" required>
+        <br>
 
-        <label>Grade:</label>
+        <label for="username">Username:</label>
+        <input type="text" id="username" required>
+        <br>
+
+        <label for="password">Password:</label>
+        <input type="password" id="password" required>
+        <br>
+
+        <label for="profileImage">Profile Image:</label>
+        <input type="file" id="profileImage" accept="image/*" required>
+        <br>
+
+        <label for="grade">Grade:</label>
         <select id="grade" required>
+            <option value="">Select Grade</option>
             <option value="9">9</option>
             <option value="10">10</option>
-        </select><br>
+        </select>
+        <br>
 
-        <label>Section:</label>
+        <label for="section">Section:</label>
         <select id="section" required>
+            <option value="">Select Section</option>
             <option value="A">A</option>
             <option value="B">B</option>
             <option value="C">C</option>
-        </select><br>
+        </select>
+        <br><br>
 
         <button type="submit">Register</button>
+
     </form>
 
+    <!-- JS -->
     <script src="{{ url_for('static', filename='js/student_register.js') }}"></script>
+
 </body>
 </html>
