--- a/frontend/school-admin/src/styles/global.css
+++ b/frontend/school-admin/src/styles/global.css
@@ -139,6 +139,7 @@
 .sidebar-menu {
   display: flex;
   flex-direction: column;
+  margin-top: -80px;
   width: 100%;
   height: 80%; /* take more vertical space */
   justify-content: center;
@@ -184,7 +185,7 @@
   font-size: 16px;
   cursor: pointer;
   transition: all 0.3s ease;
-  margin-top: 230px; /* pushes it to the bottom */
+  
 }
 
 .logout-btn:hover {
